Improve train plugin error logging.
* Adds an on-screen message for 5 seconds stating that the plugin failed to load.
* Prints Win32 plugin errors into the log.

https://github.com/leezer3/OpenBVE/pull/60

--- a/openBVE/OpenBve/Data/Languages/ca-ES.cfg
+++ b/openBVE/OpenBve/Data/Languages/ca-ES.cfg
@@ -46,6 +46,8 @@ sound_openal_device = No s'ha pogut obrir el dispositiu de so OpenAL.
 fullscreen_switch1 = S'ha produït un error en canviar al mode de pantalla completa. 
 fullscreen_switch2 = Comproveu la configuració de resolució de pantalla completa.
 route_corrupt_withtrack = The selected route is corrupt: \r\n WithTrack section missing.
+plugin_failure1 = The train plugin [plugin] failed to load. 
+plugin_failure2 = The built-in ATS/ ATC systems will be used instead, which may cause issues.
 
 [start]
 title = Inicia una nova partida
