--- a/openBVE/OpenBve/Data/Languages/cs-CZ.cfg
+++ b/openBVE/OpenBve/Data/Languages/cs-CZ.cfg
@@ -46,6 +46,8 @@ sound_openal_device = Zvukové zařízení OpenAL nemohlo být otevřeno.
 fullscreen_switch1 = Vyskytla se chyba při přepínání do zobrazení celé obrazovky.
 fullscreen_switch2 = Prosím zkontrolujte příslušné nastavené rozlišení v nastavení.
 route_corrupt_withtrack = The selected route is corrupt: \r\n WithTrack section missing.
+plugin_failure1 = The train plugin [plugin] failed to load. 
+plugin_failure2 = The built-in ATS/ ATC systems will be used instead, which may cause issues.
 
 [start]
 title = Spustit novou hru
