--- a/openBVE/OpenBve/Data/Languages/fr-FR.cfg
+++ b/openBVE/OpenBve/Data/Languages/fr-FR.cfg
@@ -46,6 +46,8 @@ sound_openal_device = The OpenAL sound device could not be opened.
 fullscreen_switch1 = An error occured whilst attempting to switch to fullscreen mode. 
 fullscreen_switch2 = Please check your fullscreen resolution settings.
 route_corrupt_withtrack = The selected route is corrupt: \r\n WithTrack section missing.
+plugin_failure1 = The train plugin [plugin] failed to load. 
+plugin_failure2 = The built-in ATS/ ATC systems will be used instead, which may cause issues.
 
 [start]
 title = Démarrer une nouvelle partie
