--- a/openBVE/OpenBve/Data/Languages/it-IT.cfg
+++ b/openBVE/OpenBve/Data/Languages/it-IT.cfg
@@ -46,6 +46,8 @@ sound_openal_device = Impossibile aprire il dispositivo per il suono OpenAL.
 fullscreen_switch1 = Errore durante il tentativo di passare a schermo intero.
 fullscreen_switch2 = Controllare le impostazione per lo schermo intero.
 route_corrupt_withtrack = The selected route is corrupt: \r\n WithTrack section missing.
+plugin_failure1 = The train plugin [plugin] failed to load. 
+plugin_failure2 = The built-in ATS/ ATC systems will be used instead, which may cause issues.
 
 [start]
 title = Avvio nuovo gioco
