--- a/openBVE/OpenBve/Data/Languages/pl-PL.cfg
+++ b/openBVE/OpenBve/Data/Languages/pl-PL.cfg
@@ -46,6 +46,8 @@ sound_openal_device = Nie udało się otworzyć 'OpenAL sound device'.
 fullscreen_switch1 = Wystąpił błąd przy próbie przejścia w tryb pełnoekranowy.
 fullscreen_switch2 = Proszę sprawdzić swoje ustawienia rozdzielczości trybu pełnoekranowego.
 route_corrupt_withtrack = The selected route is corrupt: \r\n WithTrack section missing.
+plugin_failure1 = The train plugin [plugin] failed to load. 
+plugin_failure2 = The built-in ATS/ ATC systems will be used instead, which may cause issues.
 
 [start]
 title = Nowa gra
