--- a/openBVE/OpenBve/Data/Languages/es-ES.cfg
+++ b/openBVE/OpenBve/Data/Languages/es-ES.cfg
@@ -46,6 +46,8 @@ sound_openal_device = No se pudo abrir el dispositivo de sonido OpenAL.
 fullscreen_switch1 = Error al cambiar al modo de pantalla completa.
 fullscreen_switch2 = Compruebe la configuración de resolución de pantalla completa.
 route_corrupt_withtrack = The selected route is corrupt: \r\n WithTrack section missing.
+plugin_failure1 = The train plugin [plugin] failed to load. 
+plugin_failure2 = The built-in ATS/ ATC systems will be used instead, which may cause issues.
 
 [start]
 title = Nueva partida
