--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,20 @@
 # git ignore file
+
+# User specific settings
 *.userprefs
 *.DotSettings.user
 *.suo
-bin/
-obj/
+.vs/
+
+# Versioning data
+AssemblyInfo.cs
+
+# Build results
+[Bb]in/
+[Oo]bj/
+[Dd]ebug/
+[Rr]elease/
+
+# Misc. Visual Studio files
+*.sdf
+*.opendb
