Improved the way routes are pre-processed slightly.
This commit moves the route pre-processing into a BackgroundWorker thread, and shows the busy cursor an appropriate 'Please Wait' message rather than completely freezing the main UI.

--- a/openBVE/OpenBve/Data/Languages/ca-ES.cfg
+++ b/openBVE/OpenBve/Data/Languages/ca-ES.cfg
@@ -63,6 +63,7 @@ route_gradient = Desnivells
 route_settings = Configuració
 route_settings_encoding = Codificació:
 route_settings_encoding_preview = Previsualització:
+route_processing = Processing route, please wait.....
 train = Tren
 train_selection = Selecció
 train_addons = Extensions
