--- a/openBVE/OpenBve/Data/Languages/cs-CZ.cfg
+++ b/openBVE/OpenBve/Data/Languages/cs-CZ.cfg
@@ -63,6 +63,7 @@ route_gradient = Výškový profil
 route_settings = Nastavení
 route_settings_encoding = Kódování:
 route_settings_encoding_preview = Náhled:
+route_processing = Processing route, please wait.....
 train = Vlak
 train_selection = Výběr
 train_addons = Doplňky
