--- a/openBVE/OpenBve/Data/Languages/de-CH.cfg
+++ b/openBVE/OpenBve/Data/Languages/de-CH.cfg
@@ -63,6 +63,7 @@ route_gradient = Höhenverlauf
 route_settings = Optionen
 route_settings_encoding = Kodierung:
 route_settings_encoding_preview = Vorschau:
+route_processing = Processing route, please wait.....
 train = Zug
 train_selection = Auswahl
 train_addons = Add-ons
