--- a/openBVE/OpenBve/Data/Languages/es-ES.cfg
+++ b/openBVE/OpenBve/Data/Languages/es-ES.cfg
@@ -63,6 +63,7 @@ route_gradient = Gradiente
 route_settings = Configuración
 route_settings_encoding = Codificación:
 route_settings_encoding_preview = Vista previa:
+route_processing = Processing route, please wait.....
 train = Tren
 train_selection = Selección
 train_addons = Extensiones
