--- a/openBVE/OpenBve/Data/Languages/fi-FI.cfg
+++ b/openBVE/OpenBve/Data/Languages/fi-FI.cfg
@@ -63,6 +63,7 @@ route_gradient = Reitin profiili
 route_settings = Asetukset
 route_settings_encoding = Koodaus:
 route_settings_encoding_preview = Esikatselu:
+route_processing = Processing route, please wait.....
 train = Juna
 train_selection = Valinta
 train_addons = Lisäosat
