--- a/openBVE/OpenBve/Data/Languages/fr-FR.cfg
+++ b/openBVE/OpenBve/Data/Languages/fr-FR.cfg
@@ -63,6 +63,7 @@ route_gradient = Dénivellation
 route_settings = Paramètres
 route_settings_encoding = Encodage :
 route_settings_encoding_preview = Prévisualisation :
+route_processing = Processing route, please wait.....
 train = Train
 train_selection = Sélection
 train_addons = Extensions
