--- a/openBVE/OpenBve/Data/Languages/hu-HU.cfg
+++ b/openBVE/OpenBve/Data/Languages/hu-HU.cfg
@@ -63,6 +63,7 @@ route_gradient = Lejtviszonyok
 route_settings = Beállítások
 route_settings_encoding = Kódolás:
 route_settings_encoding_preview = Előnézet:
+route_processing = Processing route, please wait.....
 train = Vonat
 train_selection = Kiválasztás
 train_addons = Kiegészítők
