--- a/openBVE/OpenBve/Data/Languages/it-IT.cfg
+++ b/openBVE/OpenBve/Data/Languages/it-IT.cfg
@@ -63,6 +63,7 @@ route_gradient = Profilo altimetrico
 route_settings = Impostazioni
 route_settings_encoding = Codifica:
 route_settings_encoding_preview = Anteprima:
+route_processing = Processing route, please wait.....
 train = Treno
 train_selection = Selezione
 train_addons = Componenti
