--- a/openBVE/OpenBve/Data/Languages/ja-JP.cfg
+++ b/openBVE/OpenBve/Data/Languages/ja-JP.cfg
@@ -63,6 +63,7 @@ route_gradient = 路線断面図
 route_settings = 設定
 route_settings_encoding = エンコード:
 route_settings_encoding_preview = プレビュー:
+route_processing = Processing route, please wait.....
 train = 車両
 train_selection = 選択
 train_addons = アドオン
