--- a/openBVE/OpenBve/Data/Languages/ko-KR.cfg
+++ b/openBVE/OpenBve/Data/Languages/ko-KR.cfg
@@ -63,6 +63,7 @@ route_gradient = 고도 보고서
 route_settings = 설정
 route_settings_encoding = 인코딩:
 route_settings_encoding_preview = 미리 보기:
+route_processing = Processing route, please wait.....
 train = 차량
 train_selection = 선택
 train_addons = Add-ons
