--- a/openBVE/OpenBve/Data/Languages/nl-NL.cfg
+++ b/openBVE/OpenBve/Data/Languages/nl-NL.cfg
@@ -63,6 +63,7 @@ route_gradient = Hellingsprofiel
 route_settings = Instellingen
 route_settings_encoding = Codering:
 route_settings_encoding_preview = Voorbeeld:
+route_processing = Processing route, please wait.....
 train = Trein
 train_selection = Selectie
 train_addons = Add-ons
