--- a/openBVE/OpenBve/Data/Languages/pl-PL.cfg
+++ b/openBVE/OpenBve/Data/Languages/pl-PL.cfg
@@ -63,6 +63,7 @@ route_gradient = Nachylenie trasy
 route_settings = Ustawienia
 route_settings_encoding = Kodowanie:
 route_settings_encoding_preview = Podgląd:
+route_processing = Processing route, please wait.....
 train = Pociąg
 train_selection = Wybierz
 train_addons = Dodatki
