--- a/openBVE/OpenBve/Data/Languages/pt-BR.cfg
+++ b/openBVE/OpenBve/Data/Languages/pt-BR.cfg
@@ -63,6 +63,7 @@ route_gradient = Topografia da linha
 route_settings = Definições
 route_settings_encoding = Codificação:
 route_settings_encoding_preview = Pré-visualização:
+route_processing = Processing route, please wait.....
 train = Trem
 train_selection = Seleção
 train_addons = Add-ons
