--- a/openBVE/OpenBve/Data/Languages/ru-RU.cfg
+++ b/openBVE/OpenBve/Data/Languages/ru-RU.cfg
@@ -63,6 +63,7 @@ route_gradient = Профиль
 route_settings = Кодировка
 route_settings_encoding = Выбрать:
 route_settings_encoding_preview = Предпросмотр:
+route_processing = Processing route, please wait.....
 train = Выбор состава
 train_selection = Состав
 train_addons = Дополнения
