--- a/openBVE/OpenBve/Data/Languages/uk-UA.cfg
+++ b/openBVE/OpenBve/Data/Languages/uk-UA.cfg
@@ -63,6 +63,7 @@ route_gradient = Нахил колії
 route_settings = Установки
 route_settings_encoding = Кодування:
 route_settings_encoding_preview = Попередній перегляд:
+route_processing = Processing route, please wait.....
 train = Поїзд
 train_selection = Обрати
 train_browse = Огляд
