--- a/openBVE/OpenBve/Data/Languages/zh-CN.cfg
+++ b/openBVE/OpenBve/Data/Languages/zh-CN.cfg
@@ -63,6 +63,7 @@ route_gradient = 斜坡检视图
 route_settings = 设置
 route_settings_encoding = 编码：
 route_settings_encoding_preview = 预览：
+route_processing = Processing route, please wait.....
 train = 车辆
 train_selection = 选择
 train_addons = 外挂
