--- a/openBVE/OpenBve/Data/Languages/zh-TW.cfg
+++ b/openBVE/OpenBve/Data/Languages/zh-TW.cfg
@@ -63,6 +63,7 @@ route_gradient = 坡度表
 route_settings = 設定
 route_settings_encoding = 編碼：
 route_settings_encoding_preview = 預覽：
+route_processing = Processing route, please wait.....
 train = 列車
 train_selection = 選擇
 train_addons = Add-ons
