--- a/openBVE/OpenBve/Data/Languages/en-US.cfg
+++ b/openBVE/OpenBve/Data/Languages/en-US.cfg
@@ -63,6 +63,7 @@ route_gradient = Gradient profile
 route_settings = Settings
 route_settings_encoding = Encoding:
 route_settings_encoding_preview = Preview:
+route_processing = Processing route, please wait.....
 train = Train
 train_selection = Selection
 train_addons = Add-ons
