--- a/openBVE/OpenBve/Data/Languages/ro-RO.cfg
+++ b/openBVE/OpenBve/Data/Languages/ro-RO.cfg
@@ -63,6 +63,7 @@ route_gradient = Profilul  în ălţimii
 route_settings = Setări
 route_settings_encoding = Codificare:
 route_settings_encoding_preview = Previzualizare:
+route_processing = Processing route, please wait.....
 train = Tren
 train_selection = Selecţie
 train_addons = Suplimente
