--- a/openBVE/OpenBveApi/OpenBveApi.csproj
+++ b/openBVE/OpenBveApi/OpenBveApi.csproj
@@ -69,6 +69,7 @@
     <Compile Include="Objects.cs" />
     <Compile Include="Orientation3.cs" />
     <Compile Include="Packages.cs" />
+    <Compile Include="Packages.Database.cs" />
     <Compile Include="Path.cs" />
     <Compile Include="Runtime.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
