--- a/openBVE/OpenBve/Data/Languages/en-GB.cfg
+++ b/openBVE/OpenBve/Data/Languages/en-GB.cfg
@@ -129,6 +129,10 @@ creation_success = Package creation was successful.
 creation_success_header = Package Creation Successful
 creation_success_files = The following files were added to your package:
 creation_proceed = Proceed......
+creation_invalid_filename = The selected filename is invalid- Please retry.
+creation_new_id = The new package has been assinged the following GUID:
+creation_replace_id = Replacing the package with the following GUID:
+creation_save = Save Package
 database_save_error = An error occured whilst saving the package database. \r\n Please check for write permissions.
 
 [controls]
