Packages: * Assorted fixes, tidying and cleaning.

--- a/openBVE/OpenBve/Data/Languages/en-GB.cfg
+++ b/openBVE/OpenBve/Data/Languages/en-GB.cfg
@@ -125,6 +125,7 @@ creation_name = Please enter a package name.
 creation_author = Please enter a package author.
 creation_description = Please enter a package description.
 creation_version = Please enter a valid package version number in the following format: \r\n 1.0.0
+creation_version_invalid = You have entered an invalid version number. \r\n Please try again.
 creation_success = Package creation was successful.
 creation_success_header = Package Creation Successful
 creation_success_files = The following files were added to your package:
@@ -133,6 +134,8 @@ creation_invalid_filename = The selected filename is invalid- Please retry.
 creation_new_id = The new package has been assinged the following GUID:
 creation_replace_id = Replacing the package with the following GUID:
 creation_save = Save Package
+uninstall_broken = Some existing packages may be broken by this action.
+uninstall_missing_xml = Unable to uninstall the selected package. \r\n XML file list missing.
 database_save_error = An error occured whilst saving the package database. \r\n Please check for write permissions.
 
 [controls]
